add button styles

--- a/src/base/_reset.scss
+++ b/src/base/_reset.scss
@@ -2,4 +2,5 @@
 =            CSS reset                        =
 =============================================*/
 
-@import "node-modules/normalize-scss/sass/normalize/import-now";
+// @import "node_modules/normalize-scss/sass/normalize/import-now";
+
